# interactive-chatbot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  EXECUTION_GUIDE.md  README.md  app.py  docker-compose.yml  langchain.ipynb  pyproject.toml
.github/workflows/: ci.yml
backend/: agent.py  calendar_approval.py  config.py  main.py  memory.py  memory_graph.py  middleware.py  ops.py  schemas.py
backend/integrations/calendar/: apple_calendar.py  base.py
backend/providers/: __init__.py  factory.py  health.py
backend/tools/: calendar_apple.py  device_control.py  system_info.py  weather.py  web_search.py
backend/voice/: service.py  stt.py  tts.py
backend/workflows/: daily_brief.py  eod_recap.py  reminders.py
docs/: api.md  integration-guide.md  local-privacy-runbook.md
examples/integrate-with-external-app/: README.md  demo.js  demo.py
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/settings/: page.tsx
frontend/components/: BriefPanel.tsx  ChatTimeline.tsx  PushToTalk.tsx  TextComposer.tsx  VoicePlayer.tsx
frontend/lib/: ask-client.ts  ask-proxy.ts  audio.ts  channel-router.ts
sdk/python/: ask_client.py
sdk/typescript/: index.ts  package.json
tests/: conftest.py  test_api.py  test_calendar_apple.py  test_memory_graph.py  test_middleware.py  test_ops.py  test_providers.py  test_stt.py  test_tools.py  test_tts.py  test_voice_flow.py  test_workflows.py
