[project]
name = "jarvis-chatbot"
version = "0.1.0"
description = "Jarvis — Personal AI assistant with tool-calling, vector memory, and real-time streaming"
requires-python = ">=3.11"
dependencies = [
    # UI
    "streamlit>=1.35",
    # API layer
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    # LangChain (v0.3 split packages)
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-community>=0.3,<0.4",
    "langchain-chroma>=0.1,<0.2",
    # Config & env
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Observability
    "structlog>=24.0",
    # Tools
    "psutil>=5.9",
    "duckduckgo-search>=6.0",
    "requests>=2.31",
    # Vector DB
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["backend*"]
