[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-kernel"
version = "0.1.0"
description = "A.S.K. (Autonomous System Kernel) — personal AI assistant with tool-calling, vector memory, and streaming"
requires-python = ">=3.11"
dependencies = [
    # UI
    "streamlit>=1.35",
    # API layer
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    # LangChain (v0.3 split packages)
    "langchain>=0.3",
    "langchain-classic>=1.0",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langchain-chroma>=0.1",
    # Config & env
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Observability
    "structlog>=24.0",
    # Tools
    "psutil>=5.9",
    "duckduckgo-search>=6.0",
    "requests>=2.31",
    # Vector DB
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
